# GLConi

./: CMakeLists.txt  Cube.cpp  Cube.h  GLConi.cpp  GLConi.h  README.md  ShaderProgram.cpp  ShaderProgram.h  Shaders.cpp  Shaders.h  VertexBufferObject.cpp  VertexBufferObject.h  main.cpp
shaders/cube/: vert.glsl
shaders/triangle/: vert.glsl
